--- a/vars/deploy/standalone.yaml
+++ b/vars/deploy/standalone.yaml
@@ -1,3 +1,11 @@
+jmx_port: "9999"
+jmx_ip: "{{ ec2_ip_address }}"
+
+kafka:
+  version_kafka: "0.9.0.1"
+  jmx_opts: "-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname={{ jmx_ip }} -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.port={{ jmx_port }} -Dcom.sun.management.jmxremote.rmi.port={{ jmx_port }} -Djava.net.preferIPv4Stack=true "
+
+
 zookeeper_servers_group: "{{ lookup('env','KAFKA_MANAGER_ZOOKEEPER_SERVERS_GROUP') if lookup('env','KAFKA_MANAGER_ZOOKEEPER_SERVERS_GROUP') != '' else 'standalone_kafka' }}"
 
 kafka_manager:
@@ -7,3 +15,10 @@ kafka_manager:
   env_vars:
     ZK_HOSTS: "{{ groups['tag_inventory_group_'+zookeeper_servers_group]|map('extract', hostvars, 'ec2_private_ip_address')|list|join(',') }}"
     JMX_PORT: "{{ jmx_port }}"
+
+
+aws:
+  s3:
+    bucket: paltalk-kafka-manager
+    object: kafka-manager-{{ kafka_manager.sources_tag }}.zip
+    download_path: /tmp/kafka-manager.zip
