--- a/aws_standalone_deploy.yaml
+++ b/aws_standalone_deploy.yaml
@@ -58,6 +58,7 @@
   vars_files:
     - vars/aws/standalone.yaml
     - vars/aws/aws.yaml
+    - vars/deploy/standalone.yaml
 
   pre_tasks:
     - name: Update apt
