--- a/vars/deploy/standalone.yaml
+++ b/vars/deploy/standalone.yaml
@@ -1,8 +1,8 @@
 jmx_port: "9999"
-jmx_ip: "{{ ec2_ip_address }}"
+jmx_ip: "{{ ec2_private_ip_address }}"
 
 kafka:
-  listner_ip: "{{ ec2_ip_address }}"
+  listner_ip: "{{ ec2_private_ip_address }}"
   version_kafka: "0.9.0.1"
   jmx_opts: "-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname={{ jmx_ip }} -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.port={{ jmx_port }} -Dcom.sun.management.jmxremote.rmi.port={{ jmx_port }} -Djava.net.preferIPv4Stack=true "
 
